# prudent-wealth-advisor

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/prudent_wealth/: __init__.py  config.py  models.py
src/prudent_wealth/agent/: __init__.py  graph.py  nodes.py  prompts.py
src/prudent_wealth/api/: __init__.py  auth.py  database.py  routes.py  schemas.py  streaming.py
src/prudent_wealth/tools/: __init__.py  calculators.py  web_search.py  yfinance_tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_streaming.py  test_streaming_role.py  test_tools.py
