[project]
name = "financial-advisor-agent"
version = "0.1.0"
description = "Prudent Wealth Steward - Conservative financial advisor agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-core>=0.3",
    "langchain-google-genai>=4.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.0",
    "yfinance>=0.2",
    "httpx>=0.27",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "isort>=5.13",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100
